--- a/Src/Web/ClientApp/package.json
+++ b/Src/Web/ClientApp/package.json
@@ -24,7 +24,11 @@
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-router": "^4.3.1",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
     "resolve-url-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
