--- a/Src/Web/Web.csproj
+++ b/Src/Web/Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -6,19 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\images\**" />
-    <Content Remove="wwwroot\images\**" />
-    <EmbeddedResource Remove="wwwroot\images\**" />
-    <None Remove="wwwroot\images\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="FrontEnd\jsx\Components\helloWorld.jsx" />
-    <Content Include="FrontEnd\jsx\Containers\home.jsx" />
-    <Content Include="FrontEnd\scss\styles.css.map" />
-    <Content Include="FrontEnd\scss\styles.min.css" />
-    <Content Include="FrontEnd\scss\styles.scss" />
-    <Content Include="FrontEnd\scss\_custom.scss" />
+    <Content Include="ClientApp\Src\scss\styles.scss" />
+    <Content Include="ClientApp\Src\scss\_custom.scss" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\dist\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
